# MRIxFields

./: .gitignore  AGENTS.md  README.md  pyproject.toml
build_backend/: clbfield_build_backend.py  fieldbridge_build_backend.py
docs/: ARCHITECTURE.md  EVALUATION_PROTOCOL.md  MRIXFIELDS2026_TASK3_METRICS.md  STAGE1_FULL_VOLUME_AUDIT.md  STAGE1_V3_DEVELOPMENT_BUNDLE.md  STATUS.md
notebooks/: colab_bootstrap.py  prospective_paired_loso_residual_colab.ipynb  prospective_paired_loso_residual_runner.py  prospective_paired_zero_shot_colab.ipynb  prospective_paired_zero_shot_runner.py  pseudo_pair_duration_probe_colab.ipynb  pseudo_pair_residual_probe_colab.ipynb  pseudo_pair_residual_probe_runner.py  stage1_vae_reconstruction_diagnostic_colab.ipynb  stage1_vae_reconstruction_diagnostic_runner.py
scripts/: build_real_manifest.py  dry_run.ps1  dry_run.sh  dry_run_real.sh  run_stage1_vae.bat
tests/: test_checkpoints.py  test_cli_help.py  test_cli_train.py  test_conditional_cnn_translator.py  test_conditional_residual_unet_translator.py  test_conditional_unet_translator.py  test_datasets.py  test_degradation.py  test_diffusion.py  test_domains.py  test_evaluation_metrics.py  test_kl_vae.py  test_latent_stats.py  test_losses.py  test_masks.py  test_models.py  test_mrixfields2026_cli.py  test_mrixfields2026_data_manifest.py  test_mrixfields2026_data_manifest_cli.py  test_mrixfields2026_manifest_audit.py  test_mrixfields2026_official_evaluation_cli.py  test_mrixfields2026_official_metrics.py  test_mrixfields2026_spec.py  test_mrixfields2026_submission.py  test_patch_bank.py  (+35 more)
(+131 files in other folders)
