[build-system]
requires = []
build-backend = "clbfield_build_backend"
backend-path = ["build_backend"]

[project]
name = "clb-field"
version = "0.1.0"
description = "Polymorphic PyTorch/MONAI-compatible framework for MRI field and contrast translation."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "CLB-Field contributors" }]
dependencies = [
  "torch>=2.0",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]
quality = [
  "mypy>=1.10",
  "ruff>=0.6",
]
monai = [
  "monai>=1.3",
]
perceptual = [
  "lpips>=0.1.4",
]
nifti = [
  "nibabel>=5.0",
]

[project.scripts]
clbfield = "clbfield.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.10"
packages = ["clbfield"]
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
